# python-codemode

./: .gitignore  BENCHMARKING.md  README.md  package.json  pyproject.toml  requirements.txt  setup.py
docs/: README.md
examples/: direct_codemode.py  langchain_agent.py  openai_agent.py  vercel_agent.py  with_langchain_mcp_adapters.py  with_langchain_mcp_tools.py  with_mcp_sdk.py  with_mcp_toolloader.py  with_mcp_use.py  with_pyodide_wasm.py
python_codemode/: __init__.py  agent.py  codemode.py  generator.py  mcp_adapter.py  metrics.py  proxy.py  schema.py
python_codemode/backends/: __init__.py  base.py  docker_backend.py  nsjail_backend.py  pyodide_backend.py  pyodide_runner.js  pyodide_wasm_backend.py
python_codemode/integrations/: __init__.py  langchain.py  openai.py  vercel.py
tests/: conftest.py  test_backends.py  test_codemode.py  test_generator.py  test_integrations.py  test_metrics.py  test_proxy.py  test_schema.py
